[package]
name = "regions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
regex = "1.8.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
overflow-checks = false
